
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char uint8_t ;


 int HTML_TAG_CLOSE ;
 int HTML_TAG_NONE ;
 int HTML_TAG_OPEN ;
 scalar_t__ isspace (char const) ;

int
sdhtml_is_tag(const uint8_t *tag_data, size_t tag_size, const char *tagname)
{
 size_t i;
 int closed = 0;

 if (tag_size < 3 || tag_data[0] != '<')
  return HTML_TAG_NONE;

 i = 1;

 if (tag_data[i] == '/') {
  closed = 1;
  i++;
 }

 for (; i < tag_size; ++i, ++tagname) {
  if (*tagname == 0)
   break;

  if (tag_data[i] != *tagname)
   return HTML_TAG_NONE;
 }

 if (i == tag_size)
  return HTML_TAG_NONE;

 if (isspace(tag_data[i]) || tag_data[i] == '>')
  return closed ? HTML_TAG_CLOSE : HTML_TAG_OPEN;

 return HTML_TAG_NONE;
}
